# ChatApp

client/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
client/src/: App.tsx
client/src/components/: Divider.tsx  Field.tsx
client/src/pages/: Home.tsx
clientssr/: .env  index.css  package-lock.json  package.json  tailwind.config.cjs
clientssr/components/: Divider.tsx  Field.tsx
clientssr/components/Modals/: index.tsx  modals.css
clientssr/components/svg/: ChatIcon.tsx  PlusIcon.tsx  SendIcon.tsx  SettingsIcon.tsx
clientssr/contexts/: modalContext.tsx
clientssr/pages/home/: index.page.tsx
clientssr/pages/index/: index.page.tsx
clientssr/queries/: index.tsx  userQueries.tsx
clientssr/renderer/: PageShell.tsx  _default.page.client.tsx  _default.page.server.tsx
server/: .gitignore  Cargo.toml
server/migrations/2022-09-19-131829_create_user/: up.sql
server/migrations/2022-09-26-080114_init/: down.sql  up.sql
server/migrations/2022-09-27-143515_dates_nullable/: down.sql  up.sql
server/migrations/2022-09-28-145943_init/: down.sql  up.sql
server/migrations/2022-09-28-151451_uniques/: up.sql
server/src/: main.rs  schema.rs
server/src/handlers/: auth_handlers.rs  mod.rs
server/src/models/: auth_models.rs  database.rs  mod.rs
server/src/routes/: auth_routes.rs  mod.rs
