[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cassandra-cpp = "1.1.0"
chrono = "0.4.22"
serde = {version = "1.0.144", features = ["derive"]}
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres"] }
