[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cassandra-cpp = "1.1.0"
chrono = {version = "0.4.22", features = ["serde"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.82"
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
scrypt = "0.10.0"
